############################################################################
## So@GUI@/data/materials/neon/Makefile.am

BUILT_SOURCES = \
	neon_0.h neon_1.h neon_2.h neon_3.h neon_4.h \
	neon_5.h neon_6.h neon_7.h neon_8.h neon_9.h \
	neon_10.h neon_11.h neon_12.h neon_13.h neon_14.h \
	neon_15.h neon_16.h neon_17.h neon_18.h neon_19.h \
	neon_20.h neon_21.h neon_22.h neon_23.h neon_24.h \
	neon_25.h neon_26.h neon_27.h neon_28.h neon_29.h \
	neon_30.h neon_31.h neon_32.h neon_33.h neon_34.h

noinst_DATA = $(BUILT_SOURCES)

materialdir = $(datadir)/Coin/materials/neon
material_DATA = \
	neon.0 neon.1 neon.2 neon.3 neon.4 \
	neon.5 neon.6 neon.7 neon.8 neon.9 \
	neon.10 neon.11 neon.12 neon.13 neon.14 \
	neon.15 neon.16 neon.17 neon.18 neon.19 \
	neon.20 neon.21 neon.22 neon.23 neon.24 \
	neon.25 neon.26 neon.27 neon.28 neon.29 \
	neon.30 neon.31 neon.32 neon.33 neon.34

############################################################################

neon_0.h: \
  $(top_srcdir)/materials/neon/neon.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_1.h: \
  $(top_srcdir)/materials/neon/neon.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_2.h: \
  $(top_srcdir)/materials/neon/neon.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_3.h: \
  $(top_srcdir)/materials/neon/neon.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_4.h: \
  $(top_srcdir)/materials/neon/neon.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_5.h: \
  $(top_srcdir)/materials/neon/neon.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_6.h: \
  $(top_srcdir)/materials/neon/neon.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_7.h: \
  $(top_srcdir)/materials/neon/neon.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_8.h: \
  $(top_srcdir)/materials/neon/neon.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_9.h: \
  $(top_srcdir)/materials/neon/neon.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_10.h: \
  $(top_srcdir)/materials/neon/neon.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_11.h: \
  $(top_srcdir)/materials/neon/neon.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_12.h: \
  $(top_srcdir)/materials/neon/neon.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_13.h: \
  $(top_srcdir)/materials/neon/neon.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_14.h: \
  $(top_srcdir)/materials/neon/neon.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_15.h: \
  $(top_srcdir)/materials/neon/neon.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_16.h: \
  $(top_srcdir)/materials/neon/neon.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_17.h: \
  $(top_srcdir)/materials/neon/neon.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_18.h: \
  $(top_srcdir)/materials/neon/neon.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_19.h: \
  $(top_srcdir)/materials/neon/neon.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_20.h: \
  $(top_srcdir)/materials/neon/neon.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_21.h: \
  $(top_srcdir)/materials/neon/neon.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_22.h: \
  $(top_srcdir)/materials/neon/neon.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_23.h: \
  $(top_srcdir)/materials/neon/neon.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_24.h: \
  $(top_srcdir)/materials/neon/neon.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_25.h: \
  $(top_srcdir)/materials/neon/neon.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_26.h: \
  $(top_srcdir)/materials/neon/neon.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_27.h: \
  $(top_srcdir)/materials/neon/neon.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_28.h: \
  $(top_srcdir)/materials/neon/neon.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_29.h: \
  $(top_srcdir)/materials/neon/neon.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_30.h: \
  $(top_srcdir)/materials/neon/neon.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_31.h: \
  $(top_srcdir)/materials/neon/neon.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_32.h: \
  $(top_srcdir)/materials/neon/neon.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_33.h: \
  $(top_srcdir)/materials/neon/neon.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

neon_34.h: \
  $(top_srcdir)/materials/neon/neon.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
