############################################################################
## So@GUI@/data/materials/rococo/Makefile.am

BUILT_SOURCES = \
	rococo_0.h rococo_1.h rococo_2.h rococo_3.h rococo_4.h \
	rococo_5.h rococo_6.h rococo_7.h rococo_8.h rococo_9.h \
	rococo_10.h rococo_11.h rococo_12.h rococo_13.h rococo_14.h \
	rococo_15.h rococo_16.h rococo_17.h rococo_18.h rococo_19.h \
	rococo_20.h rococo_21.h rococo_22.h rococo_23.h rococo_24.h \
	rococo_25.h rococo_26.h rococo_27.h rococo_28.h rococo_29.h \
	rococo_30.h rococo_31.h rococo_32.h rococo_33.h rococo_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

rococo_0.h: $(top_srcdir)/materials/rococo/rococo.0
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_1.h: $(top_srcdir)/materials/rococo/rococo.1
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_2.h: $(top_srcdir)/materials/rococo/rococo.2
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_3.h: $(top_srcdir)/materials/rococo/rococo.3
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_4.h: $(top_srcdir)/materials/rococo/rococo.4
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_5.h: $(top_srcdir)/materials/rococo/rococo.5
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_6.h: $(top_srcdir)/materials/rococo/rococo.6
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_7.h: $(top_srcdir)/materials/rococo/rococo.7
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_8.h: $(top_srcdir)/materials/rococo/rococo.8
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_9.h: $(top_srcdir)/materials/rococo/rococo.9
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_10.h: $(top_srcdir)/materials/rococo/rococo.10
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_11.h: $(top_srcdir)/materials/rococo/rococo.11
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_12.h: $(top_srcdir)/materials/rococo/rococo.12
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_13.h: $(top_srcdir)/materials/rococo/rococo.13
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_14.h: $(top_srcdir)/materials/rococo/rococo.14
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_15.h: $(top_srcdir)/materials/rococo/rococo.15
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_16.h: $(top_srcdir)/materials/rococo/rococo.16
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_17.h: $(top_srcdir)/materials/rococo/rococo.17
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_18.h: $(top_srcdir)/materials/rococo/rococo.18
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_19.h: $(top_srcdir)/materials/rococo/rococo.19
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_20.h: $(top_srcdir)/materials/rococo/rococo.20
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_21.h: $(top_srcdir)/materials/rococo/rococo.21
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_22.h: $(top_srcdir)/materials/rococo/rococo.22
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_23.h: $(top_srcdir)/materials/rococo/rococo.23
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_24.h: $(top_srcdir)/materials/rococo/rococo.24
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_25.h: $(top_srcdir)/materials/rococo/rococo.25
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_26.h: $(top_srcdir)/materials/rococo/rococo.26
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_27.h: $(top_srcdir)/materials/rococo/rococo.27
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_28.h: $(top_srcdir)/materials/rococo/rococo.28
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_29.h: $(top_srcdir)/materials/rococo/rococo.29
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_30.h: $(top_srcdir)/materials/rococo/rococo.30
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_31.h: $(top_srcdir)/materials/rococo/rococo.31
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_32.h: $(top_srcdir)/materials/rococo/rococo.32
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_33.h: $(top_srcdir)/materials/rococo/rococo.33
	$(top_builddir)/bin/iv2h.sh $^ > $@

rococo_34.h: $(top_srcdir)/materials/rococo/rococo.34
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
