############################################################################
## So@GUI@/data/materials/santafe/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/santafe
material_DATA = \
	santafe.0 santafe.1 santafe.2 santafe.3 santafe.4 \
	santafe.5 santafe.6 santafe.7 santafe.8 santafe.9 \
	santafe.10 santafe.11 santafe.12 santafe.13 santafe.14 \
	santafe.15 santafe.16 santafe.17 santafe.18 santafe.19 \
	santafe.20 santafe.21 santafe.22 santafe.23 santafe.24 \
	santafe.25 santafe.26 santafe.27 santafe.28 santafe.29 \
	santafe.30 santafe.31 santafe.32 santafe.33 santafe.34

BUILT_SOURCES = \
	santafe.h \
	santafe_0.h santafe_1.h santafe_2.h santafe_3.h santafe_4.h \
	santafe_5.h santafe_6.h santafe_7.h santafe_8.h santafe_9.h \
	santafe_10.h santafe_11.h santafe_12.h santafe_13.h santafe_14.h \
	santafe_15.h santafe_16.h santafe_17.h santafe_18.h santafe_19.h \
	santafe_20.h santafe_21.h santafe_22.h santafe_23.h santafe_24.h \
	santafe_25.h santafe_26.h santafe_27.h santafe_28.h santafe_29.h \
	santafe_30.h santafe_31.h santafe_32.h santafe_33.h santafe_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

santafe.h: $(top_srcdir)/materials/santafe/santafe.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

santafe_0.h: \
  $(top_srcdir)/materials/santafe/santafe.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_1.h: \
  $(top_srcdir)/materials/santafe/santafe.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_2.h: \
  $(top_srcdir)/materials/santafe/santafe.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_3.h: \
  $(top_srcdir)/materials/santafe/santafe.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_4.h: \
  $(top_srcdir)/materials/santafe/santafe.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_5.h: \
  $(top_srcdir)/materials/santafe/santafe.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_6.h: \
  $(top_srcdir)/materials/santafe/santafe.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_7.h: \
  $(top_srcdir)/materials/santafe/santafe.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_8.h: \
  $(top_srcdir)/materials/santafe/santafe.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_9.h: \
  $(top_srcdir)/materials/santafe/santafe.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_10.h: \
  $(top_srcdir)/materials/santafe/santafe.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_11.h: \
  $(top_srcdir)/materials/santafe/santafe.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_12.h: \
  $(top_srcdir)/materials/santafe/santafe.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_13.h: \
  $(top_srcdir)/materials/santafe/santafe.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_14.h: \
  $(top_srcdir)/materials/santafe/santafe.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_15.h: \
  $(top_srcdir)/materials/santafe/santafe.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_16.h: \
  $(top_srcdir)/materials/santafe/santafe.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_17.h: \
  $(top_srcdir)/materials/santafe/santafe.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_18.h: \
  $(top_srcdir)/materials/santafe/santafe.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_19.h: \
  $(top_srcdir)/materials/santafe/santafe.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_20.h: \
  $(top_srcdir)/materials/santafe/santafe.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_21.h: \
  $(top_srcdir)/materials/santafe/santafe.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_22.h: \
  $(top_srcdir)/materials/santafe/santafe.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_23.h: \
  $(top_srcdir)/materials/santafe/santafe.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_24.h: \
  $(top_srcdir)/materials/santafe/santafe.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_25.h: \
  $(top_srcdir)/materials/santafe/santafe.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_26.h: \
  $(top_srcdir)/materials/santafe/santafe.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_27.h: \
  $(top_srcdir)/materials/santafe/santafe.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_28.h: \
  $(top_srcdir)/materials/santafe/santafe.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_29.h: \
  $(top_srcdir)/materials/santafe/santafe.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_30.h: \
  $(top_srcdir)/materials/santafe/santafe.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_31.h: \
  $(top_srcdir)/materials/santafe/santafe.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_32.h: \
  $(top_srcdir)/materials/santafe/santafe.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_33.h: \
  $(top_srcdir)/materials/santafe/santafe.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

santafe_34.h: \
  $(top_srcdir)/materials/santafe/santafe.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
