############################################################################
## So@GUI@/data/materials/sheen/Makefile.am

BUILT_SOURCES = \
	sheen_0.h sheen_1.h sheen_2.h sheen_3.h sheen_4.h \
	sheen_5.h sheen_6.h sheen_7.h sheen_8.h sheen_9.h \
	sheen_10.h sheen_11.h sheen_12.h sheen_13.h sheen_14.h \
	sheen_15.h sheen_16.h sheen_17.h sheen_18.h sheen_19.h \
	sheen_20.h sheen_21.h sheen_22.h sheen_23.h sheen_24.h \
	sheen_25.h sheen_26.h sheen_27.h sheen_28.h sheen_29.h \
	sheen_30.h sheen_31.h sheen_32.h sheen_33.h sheen_34.h

noinst_DATA = $(BUILT_SOURCES)

materialdir = $(datadir)/Coin/materials/sheen
material_DATA = \
	sheen.0 sheen.1 sheen.2 sheen.3 sheen.4 \
	sheen.5 sheen.6 sheen.7 sheen.8 sheen.9 \
	sheen.10 sheen.11 sheen.12 sheen.13 sheen.14 \
	sheen.15 sheen.16 sheen.17 sheen.18 sheen.19 \
	sheen.20 sheen.21 sheen.22 sheen.23 sheen.24 \
	sheen.25 sheen.26 sheen.27 sheen.28 sheen.29 \
	sheen.30 sheen.31 sheen.32 sheen.33 sheen.34

############################################################################

sheen_0.h: \
  $(top_srcdir)/materials/sheen/sheen.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_1.h: \
  $(top_srcdir)/materials/sheen/sheen.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_2.h: \
  $(top_srcdir)/materials/sheen/sheen.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_3.h: \
  $(top_srcdir)/materials/sheen/sheen.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_4.h: \
  $(top_srcdir)/materials/sheen/sheen.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_5.h: \
  $(top_srcdir)/materials/sheen/sheen.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_6.h: \
  $(top_srcdir)/materials/sheen/sheen.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_7.h: \
  $(top_srcdir)/materials/sheen/sheen.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_8.h: \
  $(top_srcdir)/materials/sheen/sheen.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_9.h: \
  $(top_srcdir)/materials/sheen/sheen.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_10.h: \
  $(top_srcdir)/materials/sheen/sheen.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_11.h: \
  $(top_srcdir)/materials/sheen/sheen.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_12.h: \
  $(top_srcdir)/materials/sheen/sheen.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_13.h: \
  $(top_srcdir)/materials/sheen/sheen.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_14.h: \
  $(top_srcdir)/materials/sheen/sheen.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_15.h: \
  $(top_srcdir)/materials/sheen/sheen.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_16.h: \
  $(top_srcdir)/materials/sheen/sheen.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_17.h: \
  $(top_srcdir)/materials/sheen/sheen.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_18.h: \
  $(top_srcdir)/materials/sheen/sheen.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_19.h: \
  $(top_srcdir)/materials/sheen/sheen.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_20.h: \
  $(top_srcdir)/materials/sheen/sheen.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_21.h: \
  $(top_srcdir)/materials/sheen/sheen.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_22.h: \
  $(top_srcdir)/materials/sheen/sheen.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_23.h: \
  $(top_srcdir)/materials/sheen/sheen.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_24.h: \
  $(top_srcdir)/materials/sheen/sheen.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_25.h: \
  $(top_srcdir)/materials/sheen/sheen.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_26.h: \
  $(top_srcdir)/materials/sheen/sheen.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_27.h: \
  $(top_srcdir)/materials/sheen/sheen.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_28.h: \
  $(top_srcdir)/materials/sheen/sheen.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_29.h: \
  $(top_srcdir)/materials/sheen/sheen.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_30.h: \
  $(top_srcdir)/materials/sheen/sheen.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_31.h: \
  $(top_srcdir)/materials/sheen/sheen.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_32.h: \
  $(top_srcdir)/materials/sheen/sheen.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_33.h: \
  $(top_srcdir)/materials/sheen/sheen.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

sheen_34.h: \
  $(top_srcdir)/materials/sheen/sheen.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
