############################################################################
## So@GUI@/data/materials/silky/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/silky
material_DATA = \
	silky.0 silky.1 silky.2 silky.3 silky.4 \
	silky.5 silky.6 silky.7 silky.8 silky.9 \
	silky.10 silky.11 silky.12 silky.13 silky.14 \
	silky.15 silky.16 silky.17 silky.18 silky.19 \
	silky.20 silky.21 silky.22 silky.23 silky.24 \
	silky.25 silky.26 silky.27 silky.28 silky.29 \
	silky.30 silky.31 silky.32 silky.33 silky.34

BUILT_SOURCES = \
	silky.h \
	silky_0.h silky_1.h silky_2.h silky_3.h silky_4.h \
	silky_5.h silky_6.h silky_7.h silky_8.h silky_9.h \
	silky_10.h silky_11.h silky_12.h silky_13.h silky_14.h \
	silky_15.h silky_16.h silky_17.h silky_18.h silky_19.h \
	silky_20.h silky_21.h silky_22.h silky_23.h silky_24.h \
	silky_25.h silky_26.h silky_27.h silky_28.h silky_29.h \
	silky_30.h silky_31.h silky_32.h silky_33.h silky_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

silky.h: $(top_srcdir)/materials/silky/silky.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

silky_0.h: \
  $(top_srcdir)/materials/silky/silky.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_1.h: \
  $(top_srcdir)/materials/silky/silky.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_2.h: \
  $(top_srcdir)/materials/silky/silky.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_3.h: \
  $(top_srcdir)/materials/silky/silky.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_4.h: \
  $(top_srcdir)/materials/silky/silky.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_5.h: \
  $(top_srcdir)/materials/silky/silky.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_6.h: \
  $(top_srcdir)/materials/silky/silky.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_7.h: \
  $(top_srcdir)/materials/silky/silky.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_8.h: \
  $(top_srcdir)/materials/silky/silky.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_9.h: \
  $(top_srcdir)/materials/silky/silky.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_10.h: \
  $(top_srcdir)/materials/silky/silky.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_11.h: \
  $(top_srcdir)/materials/silky/silky.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_12.h: \
  $(top_srcdir)/materials/silky/silky.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_13.h: \
  $(top_srcdir)/materials/silky/silky.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_14.h: \
  $(top_srcdir)/materials/silky/silky.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_15.h: \
  $(top_srcdir)/materials/silky/silky.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_16.h: \
  $(top_srcdir)/materials/silky/silky.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_17.h: \
  $(top_srcdir)/materials/silky/silky.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_18.h: \
  $(top_srcdir)/materials/silky/silky.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_19.h: \
  $(top_srcdir)/materials/silky/silky.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_20.h: \
  $(top_srcdir)/materials/silky/silky.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_21.h: \
  $(top_srcdir)/materials/silky/silky.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_22.h: \
  $(top_srcdir)/materials/silky/silky.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_23.h: \
  $(top_srcdir)/materials/silky/silky.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_24.h: \
  $(top_srcdir)/materials/silky/silky.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_25.h: \
  $(top_srcdir)/materials/silky/silky.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_26.h: \
  $(top_srcdir)/materials/silky/silky.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_27.h: \
  $(top_srcdir)/materials/silky/silky.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_28.h: \
  $(top_srcdir)/materials/silky/silky.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_29.h: \
  $(top_srcdir)/materials/silky/silky.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_30.h: \
  $(top_srcdir)/materials/silky/silky.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_31.h: \
  $(top_srcdir)/materials/silky/silky.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_32.h: \
  $(top_srcdir)/materials/silky/silky.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_33.h: \
  $(top_srcdir)/materials/silky/silky.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

silky_34.h: \
  $(top_srcdir)/materials/silky/silky.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
