############################################################################
## So@GUI@/data/materials/spring/Makefile.am
## $Id$

materialdir = $(datadir)/Coin/materials/spring
material_DATA = \
	spring.0 spring.1 spring.2 spring.3 spring.4 \
	spring.5 spring.6 spring.7 spring.8 spring.9 \
	spring.10 spring.11 spring.12 spring.13 spring.14 \
	spring.15 spring.16 spring.17 spring.18 spring.19 \
	spring.20 spring.21 spring.22 spring.23 spring.24 \
	spring.25 spring.26 spring.27 spring.28 spring.29 \
	spring.30 spring.31 spring.32 spring.33 spring.34

BUILT_SOURCES = \
	spring.h \
	spring_0.h spring_1.h spring_2.h spring_3.h spring_4.h \
	spring_5.h spring_6.h spring_7.h spring_8.h spring_9.h \
	spring_10.h spring_11.h spring_12.h spring_13.h spring_14.h \
	spring_15.h spring_16.h spring_17.h spring_18.h spring_19.h \
	spring_20.h spring_21.h spring_22.h spring_23.h spring_24.h \
	spring_25.h spring_26.h spring_27.h spring_28.h spring_29.h \
	spring_30.h spring_31.h spring_32.h spring_33.h spring_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

spring.h: $(top_srcdir)/materials/spring/spring.h.in
	@( cd $(top_builddir); $(MAKE) built-sources )

spring_0.h: \
  $(top_srcdir)/materials/spring/spring.0 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_1.h: \
  $(top_srcdir)/materials/spring/spring.1 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_2.h: \
  $(top_srcdir)/materials/spring/spring.2 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_3.h: \
  $(top_srcdir)/materials/spring/spring.3 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_4.h: \
  $(top_srcdir)/materials/spring/spring.4 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_5.h: \
  $(top_srcdir)/materials/spring/spring.5 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_6.h: \
  $(top_srcdir)/materials/spring/spring.6 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_7.h: \
  $(top_srcdir)/materials/spring/spring.7 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_8.h: \
  $(top_srcdir)/materials/spring/spring.8 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_9.h: \
  $(top_srcdir)/materials/spring/spring.9 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_10.h: \
  $(top_srcdir)/materials/spring/spring.10 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_11.h: \
  $(top_srcdir)/materials/spring/spring.11 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_12.h: \
  $(top_srcdir)/materials/spring/spring.12 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_13.h: \
  $(top_srcdir)/materials/spring/spring.13 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_14.h: \
  $(top_srcdir)/materials/spring/spring.14 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_15.h: \
  $(top_srcdir)/materials/spring/spring.15 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_16.h: \
  $(top_srcdir)/materials/spring/spring.16 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_17.h: \
  $(top_srcdir)/materials/spring/spring.17 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_18.h: \
  $(top_srcdir)/materials/spring/spring.18 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_19.h: \
  $(top_srcdir)/materials/spring/spring.19 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_20.h: \
  $(top_srcdir)/materials/spring/spring.20 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_21.h: \
  $(top_srcdir)/materials/spring/spring.21 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_22.h: \
  $(top_srcdir)/materials/spring/spring.22 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_23.h: \
  $(top_srcdir)/materials/spring/spring.23 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_24.h: \
  $(top_srcdir)/materials/spring/spring.24 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_25.h: \
  $(top_srcdir)/materials/spring/spring.25 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_26.h: \
  $(top_srcdir)/materials/spring/spring.26 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_27.h: \
  $(top_srcdir)/materials/spring/spring.27 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_28.h: \
  $(top_srcdir)/materials/spring/spring.28 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_29.h: \
  $(top_srcdir)/materials/spring/spring.29 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_30.h: \
  $(top_srcdir)/materials/spring/spring.30 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_31.h: \
  $(top_srcdir)/materials/spring/spring.31 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_32.h: \
  $(top_srcdir)/materials/spring/spring.32 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_33.h: \
  $(top_srcdir)/materials/spring/spring.33 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

spring_34.h: \
  $(top_srcdir)/materials/spring/spring.34 $(top_builddir)/bin/iv2h.sh
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
