############################################################################
## So@GUI@/data/materials/summer/Makefile.am

BUILT_SOURCES = \
	summer_0.h summer_1.h summer_2.h summer_3.h summer_4.h \
	summer_5.h summer_6.h summer_7.h summer_8.h summer_9.h \
	summer_10.h summer_11.h summer_12.h summer_13.h summer_14.h \
	summer_15.h summer_16.h summer_17.h summer_18.h summer_19.h \
	summer_20.h summer_21.h summer_22.h summer_23.h summer_24.h \
	summer_25.h summer_26.h summer_27.h summer_28.h summer_29.h \
	summer_30.h summer_31.h summer_32.h summer_33.h summer_34.h

noinst_DATA = $(BUILT_SOURCES)

############################################################################

summer_0.h: $(top_srcdir)/materials/summer/summer.0
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_1.h: $(top_srcdir)/materials/summer/summer.1
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_2.h: $(top_srcdir)/materials/summer/summer.2
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_3.h: $(top_srcdir)/materials/summer/summer.3
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_4.h: $(top_srcdir)/materials/summer/summer.4
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_5.h: $(top_srcdir)/materials/summer/summer.5
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_6.h: $(top_srcdir)/materials/summer/summer.6
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_7.h: $(top_srcdir)/materials/summer/summer.7
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_8.h: $(top_srcdir)/materials/summer/summer.8
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_9.h: $(top_srcdir)/materials/summer/summer.9
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_10.h: $(top_srcdir)/materials/summer/summer.10
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_11.h: $(top_srcdir)/materials/summer/summer.11
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_12.h: $(top_srcdir)/materials/summer/summer.12
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_13.h: $(top_srcdir)/materials/summer/summer.13
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_14.h: $(top_srcdir)/materials/summer/summer.14
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_15.h: $(top_srcdir)/materials/summer/summer.15
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_16.h: $(top_srcdir)/materials/summer/summer.16
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_17.h: $(top_srcdir)/materials/summer/summer.17
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_18.h: $(top_srcdir)/materials/summer/summer.18
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_19.h: $(top_srcdir)/materials/summer/summer.19
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_20.h: $(top_srcdir)/materials/summer/summer.20
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_21.h: $(top_srcdir)/materials/summer/summer.21
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_22.h: $(top_srcdir)/materials/summer/summer.22
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_23.h: $(top_srcdir)/materials/summer/summer.23
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_24.h: $(top_srcdir)/materials/summer/summer.24
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_25.h: $(top_srcdir)/materials/summer/summer.25
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_26.h: $(top_srcdir)/materials/summer/summer.26
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_27.h: $(top_srcdir)/materials/summer/summer.27
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_28.h: $(top_srcdir)/materials/summer/summer.28
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_29.h: $(top_srcdir)/materials/summer/summer.29
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_30.h: $(top_srcdir)/materials/summer/summer.30
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_31.h: $(top_srcdir)/materials/summer/summer.31
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_32.h: $(top_srcdir)/materials/summer/summer.32
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_33.h: $(top_srcdir)/materials/summer/summer.33
	$(top_builddir)/bin/iv2h.sh $^ > $@

summer_34.h: $(top_srcdir)/materials/summer/summer.34
	$(top_builddir)/bin/iv2h.sh $^ > $@

############################################################################
